@@ -94,7 +94,6 @@ public class TRange extends EsqlConfigurationFunction
     )
     public TRange(
         Source source,
-        Expression timestamp,
         @Param(
             name = START_TIME_OR_OFFSET_PARAMETER,
             type = { "time_duration", "date_period", "date", "date_nanos", "keyword", "long" },
@@ -105,12 +104,13 @@ public class TRange extends EsqlConfigurationFunction
         ) Expression first,
         @Param(name = END_TIME_PARAMETER, type = { "keyword", "long", "date", "date_nanos" }, description = """
             Explicit end time that can be a date string, date, date_nanos or epoch milliseconds.""", optional = true) Expression second,
+        Expression timestamp,
         Configuration configuration
     ) {
-        super(source, second != null ? List.of(timestamp, first, second) : List.of(timestamp, first), configuration);
-        this.timestamp = timestamp;
+        super(source, second != null ? List.of(first, second, timestamp) : List.of(first, timestamp), configuration);
         this.first = first;
         this.second = second;
+        this.timestamp = timestamp;
     }
 
     @Override
@@ -126,6 +126,11 @@ public class TRange extends EsqlConfigurationFunction
     @Override
     public EvalOperator.ExpressionEvaluator.Factory toEvaluator(ToEvaluator toEvaluator) {
         throw new UnsupportedOperationException("should be rewritten");
+    }
+
+    @Override
+    public Expression timestamp() {
+        return timestamp;
     }
 
     @Override
@@ -189,9 +194,9 @@ public class TRange extends EsqlConfigurationFunction
     public Expression replaceChildren(List<Expression> newChildren) {
         return new TRange(
             source(),
-            newChildren.get(0),
-            newChildren.get(1),
-            newChildren.size() == 3 ? newChildren.get(2) : null,
+            newChildren.getFirst(),
+            newChildren.size() == 3 ? newChildren.get(1) : null,
+            newChildren.getLast(),
             configuration()
         );
     }
@@ -208,7 +213,7 @@ public class TRange extends EsqlConfigurationFunction
 
     @Override
     protected NodeInfo<? extends Expression> info() {
-        return NodeInfo.create(this, TRange::new, timestamp, first, second, configuration());
+        return NodeInfo.create(this, TRange::new, first, second, timestamp, configuration());
     }
 
     @Override
